# stereo_rig_complete

./: .gitmodules  README.md
custom_guyi/: README.md
custom_guyi/include/custom_guyi/: OrinDetect.hpp
custom_guyi/src/: OrinDetect.cpp  main.cpp  main_gui.cpp  ros2node.cpp
flir_camera_driver/spinnaker_camera_driver/launch/: driver_node.launch.py
imagenex831l_ROS2/: CMakeLists.txt  README.md  package.xml
imagenex831l_ROS2/cfg/: sonar.yaml
imagenex831l_ROS2/imagenex831l/: imagenex831l_driver.py  sonar_node.py  test_sonar.py
imagenex831l_ROS2/launch/: sonar.launch.py
microstrain_inertial/microstrain_inertial_driver/launch/: microstrain_launch.py
microstrain_inertial/microstrain_inertial_examples/launch/: cv7_launch.py
ms5837_bar_ros/launch/: bar02.launch.py  bar30.launch.py
ros2_bringup/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_bringup/config/: parms.yaml
ros2_bringup/launch/: stereorig_1.launch.py  stereorig_2.launch.py
ros2_bringup/src/: debayer.py
